temp for delegation pattern

--- a/LearningDesignPatterns/RabbleWabble_02_Delegation/RabbleWabble02/Views/Base.lproj/Main.storyboard
+++ b/LearningDesignPatterns/RabbleWabble_02_Delegation/RabbleWabble02/Views/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="w3d-YV-iNv">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,6 +10,79 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Select Question Group-->
+        <scene sceneID="f66-EC-GAi">
+            <objects>
+                <viewController id="sgN-7A-5gh" customClass="SelectQuestionGroupViewController" customModule="RabbleWabble02" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="QEt-r7-Zfj">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Qzh-Zb-J0W">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="QuestionGroupCell" id="ct0-vz-FcR" customClass="QuestionGroupCell" customModule="RabbleWabble02" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ct0-vz-FcR" id="LcU-kU-HIQ">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ggR-tp-Y37">
+                                                    <rect key="frame" x="15" y="11" width="312" height="22"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="750" verticalHuggingPriority="251" text="0%" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HNx-Ak-Bu2">
+                                                    <rect key="frame" x="335" y="11" width="25" height="22"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="ggR-tp-Y37" firstAttribute="top" secondItem="LcU-kU-HIQ" secondAttribute="topMargin" id="HW0-K6-73O"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="HNx-Ak-Bu2" secondAttribute="trailing" id="JOF-fq-BdY"/>
+                                                <constraint firstItem="ggR-tp-Y37" firstAttribute="bottom" secondItem="LcU-kU-HIQ" secondAttribute="bottomMargin" id="YrC-3O-j7t"/>
+                                                <constraint firstItem="HNx-Ak-Bu2" firstAttribute="top" secondItem="LcU-kU-HIQ" secondAttribute="topMargin" id="mJg-mw-sbf"/>
+                                                <constraint firstItem="ggR-tp-Y37" firstAttribute="leading" secondItem="LcU-kU-HIQ" secondAttribute="leadingMargin" id="mvh-Ky-eqQ"/>
+                                                <constraint firstItem="HNx-Ak-Bu2" firstAttribute="leading" secondItem="ggR-tp-Y37" secondAttribute="trailing" constant="8" id="uJe-Jr-W4e"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="HNx-Ak-Bu2" secondAttribute="bottom" id="wiT-GC-JEx"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="percentageLabel" destination="HNx-Ak-Bu2" id="09G-lA-IFR"/>
+                                            <outlet property="titleLabel" destination="ggR-tp-Y37" id="yFt-QF-iOQ"/>
+                                            <segue destination="BYZ-38-t0r" kind="show" id="Yl1-EC-3Yl"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="sgN-7A-5gh" id="otp-du-oo8"/>
+                                    <outlet property="delegate" destination="sgN-7A-5gh" id="Fou-uA-rZq"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="pGZ-cJ-PWN" firstAttribute="trailing" secondItem="Qzh-Zb-J0W" secondAttribute="trailing" id="6Qz-JN-HdS"/>
+                            <constraint firstItem="Qzh-Zb-J0W" firstAttribute="top" secondItem="pGZ-cJ-PWN" secondAttribute="top" id="8pO-eZ-ObE"/>
+                            <constraint firstItem="Qzh-Zb-J0W" firstAttribute="leading" secondItem="pGZ-cJ-PWN" secondAttribute="leading" id="spP-re-Sf4"/>
+                            <constraint firstItem="pGZ-cJ-PWN" firstAttribute="bottom" secondItem="Qzh-Zb-J0W" secondAttribute="bottom" id="tbb-jv-Bmd"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="pGZ-cJ-PWN"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Select Question Group" id="msX-YL-fgI"/>
+                    <connections>
+                        <outlet property="tableView" destination="Qzh-Zb-J0W" id="f7n-Zt-ue8"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rnE-T6-sMB" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="157.59999999999999" y="22.938530734632685"/>
+        </scene>
         <!--Question View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -19,19 +92,19 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Prompt" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gtU-S8-Mc7">
-                                <rect key="frame" x="0.0" y="80" width="375" height="60"/>
+                                <rect key="frame" x="0.0" y="124" width="375" height="60"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="50"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hint" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7RP-dc-YE8">
-                                <rect key="frame" x="0.0" y="148" width="375" height="29"/>
+                                <rect key="frame" x="0.0" y="192" width="375" height="29"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Answer" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t75-Hr-CGT">
-                                <rect key="frame" x="0.0" y="227" width="375" height="57.5"/>
+                                <rect key="frame" x="0.0" y="271" width="375" height="57.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="48"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -102,7 +175,25 @@
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="52" y="28.335832083958024"/>
+            <point key="canvasLocation" x="991.20000000000005" y="28.335832083958024"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="sTt-ss-0Ya">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="w3d-YV-iNv" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="aIb-zg-7lp">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="sgN-7A-5gh" kind="relationship" relationship="rootViewController" id="BG6-9G-yUu"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sln-cp-uRC" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-781.60000000000002" y="22.938530734632685"/>
         </scene>
     </scenes>
     <resources>
